--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -80,7 +80,7 @@
             <div class="profile-frame">
                 <div class="form-left">
                     <label>Department</label>
-                    <select id="departmentCode" name="courseDepartment" required>
+                    <select id="departmentCode" name="departmentCode" required>
                         <option value="" disabled selected>Select Department</option>
                         {% for dept in department_data %}
                             <option value="{{ dept.departmentCode }}">
