--- a/app/templates/adminPart/adminManageCourse.html
+++ b/app/templates/adminPart/adminManageCourse.html
@@ -8,15 +8,15 @@
     <!-- Top Centered Tabs -->
     <div class="tab-container">
         <div class="second-nav">
-            <a href="#announce" class="tab-link active" data-section="announceSection" onclick="showSection('announceSection', event)">
+            <a href="#announce" class="tab-link active" data-section="announceSection">
                 <i class="fas fa-envelope"></i>
                 <span>Notification</span>
             </a>
-            <a href="#upload" class="tab-link" data-section="uploadSection" onclick="showSection('uploadSection', event)">
+            <a href="#upload" class="tab-link" data-section="uploadSection">
                 <i class="fas fa-upload"></i>
                 <span>Upload File</span>
             </a>
-            <a href="#manual" class="tab-link" data-section="manualSection" onclick="showSection('manualSection', event)">
+            <a href="#manual" class="tab-link" data-section="manualSection">
                 <i class="fas fa-plus"></i>
                 <span>Manually Insert</span>
             </a>
