--- a/app/templates/auth/forgotPassword.html
+++ b/app/templates/auth/forgotPassword.html
@@ -4,7 +4,7 @@
     <title>ForgotPassword</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/frontPart.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth.css') }}">
 </head>
 
 <body>
@@ -14,6 +14,7 @@
         <h1>Forgot Password</h1>
         <h4><span class="span">Please input your email address to proceed with resetting your password.</span></h4>
         <br><br>
+        
         <!-- Main container allocate in centre -->
         <div class="form-container">
             <!-- Frame for Email Address container to send Email -->
