--- a/app/templates/auth/resetPassword.html
+++ b/app/templates/auth/resetPassword.html
@@ -37,7 +37,7 @@
                 <button type="button" class="toggle-password-btn">
                     <i class="fas fa-eye"></i>
                 </button>
-            </div><br>
+            </div><br><br>
         
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
