--- a/app/templates/adminPart/adminManageExam.html
+++ b/app/templates/adminPart/adminManageExam.html
@@ -197,7 +197,7 @@
                     <td>{{ row.examDate }} [{{ row.examDay }}]</td>
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>
                     <td>{{ row.examProgramCode }}</td>
-                    <td>{{ row.examCourseSectionCode }}</td>
+                    <td>{{ row.examCourseCodeSection }}</td>
                     <td>{{ row.examPracticalLecturer }}</td>
                     <td>{{ row.examTutorialLecturer }}</td>
                     <td>{{ row.examTotalStudent }}</td>
