--- a/app/templates/adminPart/adminManageInvigilationTimetable.html
+++ b/app/templates/adminPart/adminManageInvigilationTimetable.html
@@ -43,7 +43,7 @@
                     <td>{{ row.examStartTime }}</td>
                     <td>{{ row.examEndTime }}</td>
                     <td>{{ row.examProgramCode }}</td>
-                    <td>{{ row.examCourseSectionCode }}</td>
+                    <td>{{ row.examCourseCodeSection }}</td>
                     <td>{{ row.examLecturer }}</td>
                     <td>{{ row.examTotalStudent }}</td>
                     <td>{{ row.examVenue }}</td>
