--- a/app/templates/dean&hop/deanHomepage.html
+++ b/app/templates/dean&hop/deanHomepage.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "deanPart/deanBase.html" %}
+{% extends "dean&hop/deanBase.html" %}
 {% block title %}Dean Homepage{% endblock %}
 {% block content %}
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
