--- a/app/templates/dean&hop/deanInvigilationReport.html
+++ b/app/templates/dean&hop/deanInvigilationReport.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "deanPart/deanBase.html" %}
+{% extends "dean&hop/deanBase.html" %}
 {% block title %}Dean Invigilation Report{% endblock %}
 {% block content %}
 <div class="menu-section">
