--- a/app/templates/dean&hop/deanProfile.html
+++ b/app/templates/dean&hop/deanProfile.html
@@ -1,4 +1,4 @@
-{% extends "deanPart/deanBase.html" %}
+{% extends "dean&hop/deanBase.html" %}
 {% block title %}Dean Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
