--- a/app/templates/lecturer/lecturerHomepage.html
+++ b/app/templates/lecturer/lecturerHomepage.html
@@ -1,5 +1,4 @@
-<!-- upload.html -->
-{% extends "lecturerPart/lecturerBase.html" %}
+{% extends "lecturer/lecturerBase.html" %}
 {% block title %}Lecturer Homepage{% endblock %}
 {% block content %}
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
