--- a/app/templates/lecturer/lecturerInvigilationReport.html
+++ b/app/templates/lecturer/lecturerInvigilationReport.html
@@ -1,26 +1,26 @@
 <!-- upload.html -->
-{% extends "deanPart/deanBase.html" %}
-{% block title %}Dean Timetable{% endblock %}
+{% extends "lecturer/lecturerBase.html" %}
+{% block title %}Lecturer InvigilationReport{% endblock %}
 {% block content %}
 <div class="menu-section">
-    <h2>Timetables</h2>
+    <h2>Invigilation Report</h2>
 
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
                 <tr>
-                    <th>Date / Time</th>
-                    <th>08:00 AM</th>
-                    <th>09:00 AM</th>
-                    <th>10:00 AM</th>
-                    <th>11:00 AM</th>
-                    <th>12:00 PM</th>
-                    <th>13:00 PM</th>
-                    <th>14:00 PM</th>
-                    <th>15:00 PM</th>
-                    <th>16:00 PM</th>
-                    <th>17:00 PM</th>
-                    <th>18:00 PM</th>
+                    <th>No</th>
+                    <th>Exam Date</th>
+                    <th>Exam Day</th>
+                    <th>Start Time</th>
+                    <th>End Time</th>
+                    <th>Program Code</th>
+                    <th>Course/Section</th>
+                    <th>Lecturer</th>
+                    <th>No. of Students</th>
+                    <th>Room</th>
+                    <th>Invgilater 1</th>
+                    <th>Invgilater 2</th>
                 </tr>
             </thead>
             <tbody>
