--- a/app/templates/lecturer/lecturerProfile.html
+++ b/app/templates/lecturer/lecturerProfile.html
@@ -1,4 +1,4 @@
-{% extends "lecturerPart/lecturerBase.html" %}
+{% extends "lecturer/lecturerBase.html" %}
 {% block title %}Lecturer Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
