--- a/app/templates/admin/adminHomepage.html
+++ b/app/templates/admin/adminHomepage.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "adminPart/adminBase.html" %}
+{% extends "admin/adminBase.html" %}
 {% block title %}Admin Homepage{% endblock %}
 {% block content %}
 <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
