--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -1,6 +1,5 @@
-{% extends "adminPart/adminBase.html" %}
+{% extends "admin/adminBase.html" %}
 {% block title %}Admin ManageCourse{% endblock %}
-
 {% block content %}
 <div class="menu-section">
     <h2>Manage Course</h2>
