--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -1,26 +1,26 @@
 <!-- upload.html -->
-{% extends "lecturerPart/lecturerBase.html" %}
-{% block title %}Lecturer InvigilationTimetabl{% endblock %}
+{% extends "admin/adminBase.html" %}
+{% block title %}Admin ManageInvigilationReport{% endblock %}
 {% block content %}
-<div class="menu-section">
-    <h2>Invigilation Timetable</h2>
 
+<!-- Row 1 First Fesatures to upload merge schedule files--> 
+<div class="menu-section">
+    <h2>Manage Lecturer</h2>
+
+    <br><br>
+    <h3>List of Lecturer, Dean, and HOP</h2>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
-                <tr>
+                <tr2
                     <th>No</th>
-                    <th>Exam Date</th>
-                    <th>Exam Day</th>
-                    <th>Start Time</th>
-                    <th>End Time</th>
-                    <th>Program Code</th>
-                    <th>Course/Section</th>
-                    <th>Lecturer</th>
-                    <th>No. of Students</th>
-                    <th>Room</th>
-                    <th>Invgilater 1</th>
-                    <th>Invgilater 2</th>
+                    <th>Id</th>
+                    <th>Name</th>
+                    <th>Department</th>
+                    <th>Role Based</th>
+                    <th>Email</th>
+                    <th>Contact</th>
+                    <th>Status</th>
                 </tr>
             </thead>
             <tbody>
@@ -61,7 +61,9 @@
         </table>
     </div>
 </div>
-<script src="{{ url_for('static', filename='js/function.js') }}"></script>
-
 
 {% endblock %}
+
+<!--
+
+-->
