--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -1,5 +1,5 @@
 <!-- upload.html -->
-{% extends "adminPart/adminBase.html" %}
+{% extends "admin/adminBase.html" %}
 {% block title %}Admin ManageTimetable{% endblock %}
 {% block content %}
 <div class="menu-section">
