--- a/app/templates/admin/adminManageVenue.html
+++ b/app/templates/admin/adminManageVenue.html
@@ -1,4 +1,4 @@
-{% extends "adminPart/adminBase.html" %}
+{% extends "admin/adminBase.html" %}
 {% block title %}Admin ManageVenue{% endblock %}
 {% block content %}
 
