--- a/app/templates/admin/adminProfile.html
+++ b/app/templates/admin/adminProfile.html
@@ -1,4 +1,4 @@
-{% extends "adminPart/adminBase.html" %}
+{% extends "admin/adminBase.html" %}
 {% block title %}Admin Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
