--- a/app/templates/dean/deanProfile.html
+++ b/app/templates/dean/deanProfile.html
@@ -1,9 +1,12 @@
-{% extends "dean&hop/deanBase.html" %}
+{% extends "dean/deanBase.html" %}
 {% block title %}Dean Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Profile</h2>
     <form method="post">
+        <label>Now display out the contact number value, everytime click on the button will show 'Similar Contact Number Update'</label><br>
+        <label>Does allow admin to change their department? Only admin able to change</label><br><br><br>
+
         <div class="profile-frame">
             <div class="form-left">
                 <label>Full Name as per IC</label>
@@ -13,20 +16,26 @@
                 <input type="text" name="userid" value="{{ dean_id }}" readonly><br>
 
                 <label>Email Address</label>
-                <input type="text" name="email" value="{{ dean_email }}" readonly><br>
+                <input type="text" name="email" value="{{ dean_email }}" readonly>
+            </div>
+            
+            <div class="form-middle">
+                <label>Gender</label>
+                <input type="text" name="gender" value="{{ dean_gender }}" readonly><br>
 
                 <label>Role Based</label>
                 <input type="text" name="role", value="{{ dean_role_text}}" readonly><br>
-            </div>
-            <div class="form-right">
-                <label>Department</label>
-                <input type="text" name="department", value="{{ dean_department_text}}" readonly><br>
 
-                <label>Contact Number</label>
-                <input type="tel" name="contact" value="{{ dean_contact_text }}"><br>  
+                <label>Department</label>
+                <input type="text" name="department", value="{{ dean_department_text}}" readonly>
+            </div>
+
+            <div class="form-right">
+                <label>Contact Number (Editable)</label>
+                <input type="tel" name="contact" value="{{ dean_contact_text }}"><br>
 
                 <div class="password-container">
-                    <label>Password</label> 
+                    <label>Password (Editable)</label> 
                     <input type="password" name="password1" value="{{ dean_password1_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -34,7 +43,7 @@
                 </div><br>
 
                 <div class="password-container">
-                    <label> Confirm Password</label>
+                    <label> Confirm Password (Editable)</label>
                     <input type="password" name="password2" value="{{ dean_password2_text }}">
                     <button type="button" class="toggle-password-btn">
                         <i class="fas fa-eye"></i>
@@ -42,6 +51,7 @@
                 </div>
             </div>
         </div>
+
         <br>
         {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
@@ -53,14 +63,14 @@
             {% endif %}
         {% endwith %}
         <br>
+        
         <div class="button-wrapper">
-                <button type="submit">Submit</button>
+                <button type="submit">Update</button>
         </div>
     </form>
-        
-
 </div>
 {% endblock %}
+
 
 
 
