--- a/app/templates/hop/hopInvigilationReport.html
+++ b/app/templates/hop/hopInvigilationReport.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
-{% extends "dean&hop/deanBase.html" %}
-{% block title %}Dean Timetable{% endblock %}
+{% extends "hop/hopBase.html" %}
+{% block title %}Dean Invigilation Report{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Timetables</h2>
