--- a/app/templates/dean/deanBase.html
+++ b/app/templates/dean/deanBase.html
@@ -13,7 +13,7 @@
             <i class="fas fa-bars"></i>
         </div>
         <div class="user-info">
-            {{ user_name }} | {{ user_id }} | Dean/HOP of {{ user_department }}
+            {{ user_name }} | {{ user_id }} | Dean of {{ user_department }}
         </div>
     </header>
 
