--- a/app/templates/admin/adminBase.html
+++ b/app/templates/admin/adminBase.html
@@ -41,9 +41,9 @@
                     <i class="fas fa-file-alt"></i>
                     <span>Manage Exam (DONE)</span>
                 </a>
-                <a href="{{ url_for('admin_manageLecturer') }}" class="tab-link {% if active_tab == 'admin_manageLecturertab' %}active{% endif %}">
+                <a href="{{ url_for('admin_manageStaff') }}" class="tab-link {% if active_tab == 'admin_manageStafftab' %}active{% endif %}">
                     <i class="fas fa-users"></i>
-                    <span>Manage Lecturer (DONE)</span>
+                    <span>Manage Staff (DONE)</span>
                 </a>
                 <a href="{{ url_for('admin_manageTimetable') }}" class="tab-link {% if active_tab == 'admin_manageTimetabletab' %}active{% endif %}">
                     <i class="fas fa-table"></i>
