--- a/app/templates/hop/hopProfile.html
+++ b/app/templates/hop/hopProfile.html
@@ -1,5 +1,5 @@
 {% extends "hop/hopBase.html" %}
-{% block title %}Dean Profile{% endblock %}
+{% block title %}Hop Profile{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Profile</h2>
