--- a/app/templates/hop/hopHomepage.html
+++ b/app/templates/hop/hopHomepage.html
@@ -1,6 +1,6 @@
 <!-- upload.html -->
 {% extends "hop/hopBase.html" %}
-{% block title %}Dean Homepage{% endblock %}
+{% block title %}Hop Homepage{% endblock %}
 {% block content %}
     <div class="menu-grid" style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 1%; width: 100%;;">
         <!-- Row 1 First Fesatures to upload merge schedule files--> 
