--- a/app/templates/hop/hopTimetable.html
+++ b/app/templates/hop/hopTimetable.html
@@ -1,5 +1,5 @@
 {% extends "hop/hopBase.html" %}
-{% block title %}Dean Timetable{% endblock %}
+{% block title %}Hop Timetable{% endblock %}
 {% block content %}
 <div class="menu-section">
     <h2>Timetables</h2>
