--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -44,7 +44,7 @@
     </form>
 
         <!-- Upload Form -->
-    <form id="uploadForm" action="{{ url_for('admin_manageSatff') }}" method="POST" style="display: none;">
+    <form id="uploadForm" action="{{ url_for('admin_manageStaff') }}" method="POST" style="display: none;">
         <div id="uploadSection" class="function-frame">
             <div class="form-left" style="width: 100%">
                 <h4 style="text-align: center;">File Upload Section</h4>
