--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -176,7 +176,7 @@
 
 
     <br><br>
-    <h2>Table Record</h2>
+    <h2>List of Exam</h2>
     <!--<label>
         Alert<br>
         1. ID as the PK<br>
