--- a/app/templates/admin/adminManageInvigilationReport.html
+++ b/app/templates/admin/adminManageInvigilationReport.html
@@ -5,10 +5,10 @@
 
 <!-- Row 1 First Fesatures to upload merge schedule files--> 
 <div class="menu-section">
-    <h2>Manage Lecturer</h2>
+    <h2>Manage Invigilation Report</h2>
 
     <br><br>
-    <h3>List of Lecturer, Dean, and HOP</h2>
+    <h3>List of Lecturer Invigilation Report</h2>
     <div class="user-table-container">
         <table class="user-data-table">
             <thead>
