--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -172,7 +172,7 @@
     </form>
 
     <br><br>
-    <h2>Table Record</h2>
+    <h2>List of Course</h2>
 
     <div class="user-table-container">
         <table class="user-data-table">
