--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -162,7 +162,7 @@
     </form>
 
     <br><br>
-    <h2>Table Record</h2>
+    <h2>List of Staff</h2>
     <!--<label>
         To Do: <br>
         1. Allow edit based on the Id <br>
