--- a/app/templates/admin/adminManageTimetable.html
+++ b/app/templates/admin/adminManageTimetable.html
@@ -28,7 +28,7 @@
     
 
     <br><br>
-    <h2>Table Record</h2>
+    <h2>List of Staff Timetable</h2>
     <!--<label>
         To Do: <br>
         1. Allow edit based on the Id <br>
