--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -211,11 +211,11 @@
                     <!-- <td>{{ row.examID  }}</td> -->
                     <td>{{ row.examDate }} [{{ row.examDay }}]</td>
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>
-                    <td>{{ row.examProgramCode }}</td>
+                    <td>{{ row.course.programCode }}</td>
                     <td>{{ row.examCourseCodeSection }}</td>
-                    <td>{{ row.examPracticalLecturer }}</td>
-                    <td>{{ row.examTutorialLecturer }}</td>
-                    <td>{{ row.examTotalStudent }}</td>
+                    <td>{{ row.course.practicalLecturer }}</td>
+                    <td>{{ row.course.tutorialLecturer }}</td>
+                    <td>{{ row.course.totalStudent }}</td>
                     <td>{{ row.examVenue }}</td>
                 </tr>
                 {% endfor %}
