--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -184,8 +184,10 @@
                     <th>Role Based</th>
                     <th>Department</th>
                     <th>Contact</th>
-                    <th>Status</th> <!-- 
-                    If upload only -> no register, 
+                    <th>Status</th> 
+                    <th>Registed Date&Time</th>
+
+                    <!-- If upload only -> no register, 
                     if lecturer register self ->register, 
                     if register data no similar with register -> wrong data-->
                 </tr>
@@ -222,6 +224,7 @@
                             Deactivated
                         {% endif %}
                     </td>
+                    <td>{{ row.userRegisterDateTime }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
