--- a/app/templates/admin/adminManageStaff.html
+++ b/app/templates/admin/adminManageStaff.html
@@ -185,9 +185,7 @@
                     <th>Department</th>
                     <th>Contact</th>
                     <th>Status</th> 
-                    <th>Registed Date&Time</th>
-
-                    <!-- If upload only -> no register, 
+                    <th>Registed Date&Time</th><!-- If upload only -> no register, 
                     if lecturer register self ->register, 
                     if register data no similar with register -> wrong data-->
                 </tr>
