--- a/app/templates/admin/adminManageCourse.html
+++ b/app/templates/admin/adminManageCourse.html
@@ -121,7 +121,7 @@
                     <select name="practicalLecturerSelect" id="practicalLecturerSelect" required>
                         <option value="" disabled selected>Select Practical Lecturer</option>
                         {% for lecturer in lecturer_data %}
-                            <option value="{{ lecturer.userName }}">
+                            <option value="{{ lecturer.userId }}">
                                 {{ lecturer.userName }}
                             </option>  
                         {% endfor %}
@@ -131,7 +131,7 @@
                     <select name="tutorialLecturerSelect" id="tutorialLecturerSelect" required>
                         <option value="" disabled selected>Select Tutorial Lecturer</option>
                         {% for lecturer in lecturer_data %}
-                            <option value="{{ lecturer.userName }}">
+                            <option value="{{ lecturer.userId }}">
                                 {{ lecturer.userName }}
                             </option>   
                         {% endfor %}
