--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -213,8 +213,8 @@
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>
                     <td>{{ row.course.courseDepartment }}</td>
                     <td>{{ row.examCourseCodeSection }}</td>
-                    <td>{{ row.course.coursePractical }}</td>
-                    <td>{{ row.course.courseTutorial }}</td>
+                    <td>{{ row.course.coursePractical.userName }}</td>
+                    <td>{{ row.course.courseTutorial.userName }}</td>
                     <td>{{ row.course.courseStudent }}</td>
                     <td>{{ row.examVenue }}</td>
                 </tr>
