--- a/app/templates/admin/adminManageExam.html
+++ b/app/templates/admin/adminManageExam.html
@@ -208,13 +208,12 @@
                 {% for row in exam_data %}
                 <tr>
                     <td>{{ loop.index }}</td> <!-- Display index starting from 1 -->
-                    <!-- <td>{{ row.examID  }}</td> -->
                     <td>{{ row.examDate }} [{{ row.examDay }}]</td>
                     <td>{{ row.examStartTime }} - {{ row.examEndTime }}</td>
-                    <td>{{ row.course.courseDepartment }}</td>
+                    <td>{{ row.course.courseCode }}</td>
                     <td>{{ row.examCourseCodeSection }}</td>
-                    <td>{{ row.course.coursePractical.userName }}</td>
-                    <td>{{ row.course.courseTutorial.userName }}</td>
+                    <td>{{ row.course.practicalLecturer.userName }}</td>
+                    <td>{{ row.course.tutorialLecturer.userName }}</td>
                     <td>{{ row.course.courseStudent }}</td>
                     <td>{{ row.examVenue }}</td>
                 </tr>
